# uvtrick

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  demo.py  pyproject.toml  setup.py
.github/workflows/: tests.yaml
examples/: add.py  decorator.py  demo.py  hello.py  kmeans.py  linear-demo.py  pca-demo.py  plot.py  rich_versions.py
examples/simple/: main.py  some_script.py
src/uvtrick/: __init__.py  core.py  env.py  trick.py
src/uvtrick/unused/: argskwargs_to_callstring.py
tests/: add_test.py  basics_test.py  conftest.py  demo_test.py  example_test.py  examples_test.py  rich-fail.py  rich-script.py  rich_script.py  rich_versions_test.py  simple_test.py  test_basics.py  test_examples.py
tests/assets/: add.py  hello.py  rich_script.py
tests/assets/simple/: main.py
tests/examples/: add_test.py  hello_test.py  rich_versions_test.py  simple_test.py
uvtrick/: __init__.py  env.py  trick.py
