[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[project]
authors = [
  {name = "Vincent D Warmerdam"},
  {email = "louismmx@gmail.com", name = "Louis Maddox"}
]
classifiers = [
  "Development Status :: 3 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License"
]
dependencies = [
  "uv",
]
description = "A fun party trick to run Python code from another venv into this one."
license = {text = "MIT"}
name = "uvtrick"
version = "0.3.0"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/lmmx/uvtrick"
Repository = "https://github.com/lmmx/uvtrick.git"

[tool.pdm.dev-dependencies]
test = [
    "inline-snapshot>=0.12.1",
    "pytest>=8.3.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "inline-snapshot>=0.12.1",
]
