[project]
authors = [
  {name = "Vincent D Warmerdam"}
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License"
]
dependencies = [
  "cloudpickle>=2.0.0",
  "uv",
]
description = "A fun party trick to run Python code from another venv into this one."
license = {text = "MIT"}
name = "uvtrick"
version = "0.4.0"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/koaning/uvtrick"
Repository = "https://github.com/koaning/uvtrick.git"

[tool.pdm.dev-dependencies]
test = [
  "pytest>=8.3.2"
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.2"
]
